Performance improvements to address layout shifts (#2031)
* Reduce layout shifts

* Move most JS to separate files

* Remove chapter.js from JSON file

* Add missing defer back

* Use prefers-reduce-data with fonts and cleanup JS

* Fix navs

* Remove print.css

--- a/src/templates/base/accessibility_statement.html
+++ b/src/templates/base/accessibility_statement.html
@@ -44,10 +44,10 @@
 
 {% block main %}
 <main id="accessibility_statement" class="main">
-  <nav class="index">
+  <nav aria-label="{{ self.index_nav_title() }}" class="index">
     <div class="index-box floating-card">
       <h2 class="header">
-        <button type="button" class="index-btn">{{ self.index_title() }}</button>
+        <button type="button" class="index-btn" aria-expanded="false" aria-label="{{ self.open_the_index() }}"  data-close-text="{{ self.close_the_index() }}" data-open-text="{{ self.open_the_index() }}">{{ self.index_title() }}</button>
         <span class="no-button">{{ self.index_title() }}</span>
       </h2>
       {{ self.index() }}
@@ -60,10 +60,4 @@
 
   </article>
 </main>
-{% endblock %}
-
-{% block scripts %}
-{{ super() }}
-{{ self.index_menu_script() }}
-<script src="{{ get_versioned_filename('/static/js/chapter.js') }}" defer></script>
 {% endblock %}
