Remove prefers-reduced-data for font loading

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,10 +8,10 @@
       <link rel="stylesheet" href="{{ get_versioned_filename('/static/css/normalize.css') }}">
       <link rel="preload" href="{{ get_versioned_filename('/static/css/normalize.css') }}" as="style">
       {% block styles %}{% endblock %}
-      <link rel="preload" href="/static/fonts/Lato-Regular.woff2" as="font" type="font/woff2" media="(prefers-reduced-data: no-preference)" crossorigin>
-      <link rel="preload" href="/static/fonts/Poppins-Bold.woff2" as="font" type="font/woff2" media="(prefers-reduced-data: no-preference)" crossorigin>
-      <link rel="preload" href="/static/fonts/Lato-Black.woff2" as="font" type="font/woff2" media="(prefers-reduced-data: no-preference)" crossorigin>
-      <link rel="preload" href="/static/fonts/Lato-Bold.woff2" as="font" type="font/woff2" media="(prefers-reduced-data: no-preference)" crossorigin>
+      <link rel="preload" href="/static/fonts/Lato-Regular.woff2" as="font" type="font/woff2" crossorigin>
+      <link rel="preload" href="/static/fonts/Poppins-Bold.woff2" as="font" type="font/woff2" crossorigin>
+      <link rel="preload" href="/static/fonts/Lato-Black.woff2" as="font" type="font/woff2" crossorigin>
+      <link rel="preload" href="/static/fonts/Lato-Bold.woff2" as="font" type="font/woff2" crossorigin>
     {% endblock %}
     <link rel="shortcut icon" href="/static/images/favicon.ico">
     <link rel="apple-touch-icon" href="/static/images/apple-touch-icon.png">
