--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -5,10 +5,7 @@
   font-style: italic;
   font-weight: 400;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/lato/v16/S6u8w4BMUTPHjxsAUi-qNiXg7eU0.woff2) */
-    url('/static/fonts/Lato-Italic-ext.woff2')
-    format('woff2');
+  src: url('/static/fonts/Lato-Italic-ext.woff2') format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -17,10 +14,7 @@
   font-style: italic;
   font-weight: 400;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/lato/v16/S6u8w4BMUTPHjxsAXC-qNiXg7Q.woff2) */
-    url('/static/fonts/Lato-Italic.woff2')
-    format('woff2');
+  src: url('/static/fonts/Lato-Italic.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
@@ -29,10 +23,7 @@
   font-style: italic;
   font-weight: 700;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/lato/v16/S6u_w4BMUTPHjxsI5wq_FQftx9897sxZ.woff2) */
-    url('/static/fonts/Lato-BoldItalic-ext.woff2')
-    format('woff2');
+  src: url('/static/fonts/Lato-BoldItalic-ext.woff2') format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -41,10 +32,7 @@
   font-style: italic;
   font-weight: 700;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/lato/v16/S6u_w4BMUTPHjxsI5wq_Gwftx9897g.woff2) */
-    url('/static/fonts/Lato-BoldItalic.woff2')
-    format('woff2');
+  src: url('/static/fonts/Lato-BoldItalic.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
@@ -53,10 +41,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/lato/v16/S6uyw4BMUTPHjxAwXiWtFCfQ7A.woff2) */
-    url('/static/fonts/Lato-Regular-ext.woff2')
-    format('woff2');
+  src: url('/static/fonts/Lato-Regular-ext.woff2') format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -65,10 +50,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/lato/v16/S6uyw4BMUTPHjx4wXiWtFCc.woff2) */
-    url('/static/fonts/Lato-Regular.woff2')
-    format('woff2');
+  src: url('/static/fonts/Lato-Regular.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
@@ -77,10 +59,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/lato/v16/S6u9w4BMUTPHh6UVSwaPGQ3q5d0N7w.woff2) */
-    url('/static/fonts/Lato-Bold-ext.woff2')
-    format('woff2');
+  src: url('/static/fonts/Lato-Bold-ext.woff2') format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -89,10 +68,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/lato/v16/S6u9w4BMUTPHh6UVSwiPGQ3q5d0.woff2) */
-    url('/static/fonts/Lato-Bold.woff2')
-    format('woff2');
+  src: url('/static/fonts/Lato-Bold.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
@@ -101,10 +77,7 @@
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/lato/v16/S6u9w4BMUTPHh50XSwaPGQ3q5d0N7w.woff2) */
-    url('/static/fonts/Lato-Black-ext.woff2')
-    format('woff2');
+  src: url('/static/fonts/Lato-Black-ext.woff2') format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -113,10 +86,7 @@
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/lato/v16/S6u9w4BMUTPHh50XSwiPGQ3q5d0.woff2) */
-    url('/static/fonts/Lato-Black.woff2')
-    format('woff2');
+  src: url('/static/fonts/Lato-Black.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* devanagari */
@@ -125,10 +95,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiByp8kv8JHgFVrLDz8Z11lFd2JQEl8qw.woff2) */
-    url('/static/fonts/Poppins-Light-devanagari.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Light-devanagari.woff2') format('woff2');
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
 /* latin-ext */
@@ -137,10 +104,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiByp8kv8JHgFVrLDz8Z1JlFd2JQEl8qw.woff2) */
-    url('/static/fonts/Poppins-Light-ext.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Light-ext.woff2') format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -149,10 +113,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiByp8kv8JHgFVrLDz8Z1xlFd2JQEk.woff2) */
-    url('/static/fonts/Poppins-Light.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Light.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* devanagari */
@@ -161,10 +122,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiEyp8kv8JHgFVrJJbecnFHGPezSQ.woff2) */
-    url('/static/fonts/Poppins-Regular-devanagari.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Regular-devanagari.woff2') format('woff2');
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
 /* latin-ext */
@@ -173,10 +131,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiEyp8kv8JHgFVrJJnecnFHGPezSQ.woff2) */
-    url('/static/fonts/Poppins-Regular-ext.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Regular-ext.woff2') format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -185,10 +140,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiEyp8kv8JHgFVrJJfecnFHGPc.woff2) */
-    url('/static/fonts/Poppins-Regular.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Regular.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* devanagari */
@@ -197,10 +149,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiByp8kv8JHgFVrLCz7Z11lFd2JQEl8qw.woff2) */
-    url('/static/fonts/Poppins-Bold-devanagari.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Bold-devanagari.woff2') format('woff2');
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
 /* latin-ext */
@@ -209,10 +158,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiByp8kv8JHgFVrLCz7Z1JlFd2JQEl8qw.woff2) */
-    url('/static/fonts/Poppins-Bold-ext.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Bold-ext.woff2') format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -221,10 +167,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiByp8kv8JHgFVrLCz7Z1xlFd2JQEk.woff2) */
-    url('/static/fonts/Poppins-Bold.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Bold.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* devanagari */
@@ -233,10 +176,7 @@
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiByp8kv8JHgFVrLBT5Z11lFd2JQEl8qw.woff2) */
-    url('/static/fonts/Poppins-Black-devanagari.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Black-devanagari.woff2') format('woff2');
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
 /* latin-ext */
@@ -245,10 +185,7 @@
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiByp8kv8JHgFVrLBT5Z1JlFd2JQEl8qw.woff2) */
-    url('/static/fonts/Poppins-Black-ext.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Black-ext.woff2') format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -257,10 +194,7 @@
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src:
-    /* url(https://fonts.gstatic.com/s/poppins/v9/pxiByp8kv8JHgFVrLBT5Z1xlFd2JQEk.woff2) */
-    url('/static/fonts/Poppins-Black.woff2')
-    format('woff2');
+  src: url('/static/fonts/Poppins-Black.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
