Preload the font needed for the index page

--- a/src/templates/base/index.html
+++ b/src/templates/base/index.html
@@ -25,6 +25,7 @@
   {{ super() }}
   <link rel="stylesheet" href="{{ get_versioned_filename('/static/css/index.css') }}">
   <link rel="preload" href="{{ get_versioned_filename('/static/css/index.css') }}" as="style" />
+  <link rel="preload" href="/static/fonts/Poppins-Light.woff2" as="font" type="font/woff2" crossorigin>
 {% endblock %}
 
 {% block container %}
