--- a/src/templates/en/2020/stories/page_content.html
+++ b/src/templates/en/2020/stories/page_content.html
@@ -636,7 +636,7 @@
         "image": [
           {
             "@type":"ImageObject",
-            "url":"https://almanac.httparchive.org/static/images/home-hero-2020-part-1.png"
+            "url":"https://almanac.httparchive.org/static/images/home-hero-2020-part-1.png",
             "width": 1200,
             "height": 675
           },
